Added a placeholder list of links at the top of my assigned pages. Put information onto the "About page" for origins of the band, as well as a few cities where they will be going on an upcoming tour.

--- a/about_page.html
+++ b/about_page.html
@@ -1,2 +1,21 @@
 <!-- Will Roberts -->
-About Page
+<ul>
+	<li>about_page.html </li>
+	<li>Album Page </li>
+	<li>Index Page </li>
+	<li>Information Page </li>
+	<li>Login Page </li>
+	<li>schedule_page.html </li>
+	<li>signup_page.html </li>
+	<li>store_page.html </li>
+</ul>
+
+<h1>About the Band</h1>
+
+<p>Coming together for the first time by singing at a bar's karaoke machine, "Boots 'n Beer" have been making music for just under a year now. In that time frame, they have released two small albums. They will soon be going on a tour in some smaller towns located around Des Moines including: </p>
+
+<ul>
+	<li>Indianola</li>
+	<li>Ames</li>
+	<li>Ankeny</li>
+</ul>
