--- a/schedule_page.html
+++ b/schedule_page.html
@@ -1,2 +1,12 @@
 <!-- Will Roberts -->
+<ul>
+	<li>about_page.html </li>
+	<li>Album Page </li>
+	<li>Index Page </li>
+	<li>Information Page </li>
+	<li>Login Page </li>
+	<li>schedule_page.html </li>
+	<li>signup_page.html </li>
+	<li>store_page.html </li>
+</ul>
 Schedule Page
