--- a/signup_page.html
+++ b/signup_page.html
@@ -1,4 +1,14 @@
 <!-- Will Roberts -->
+<ul>
+	<li>about_page.html </li>
+	<li>Album Page </li>
+	<li>Index Page </li>
+	<li>Information Page </li>
+	<li>Login Page </li>
+	<li>schedule_page.html </li>
+	<li>signup_page.html </li>
+	<li>store_page.html </li>
+</ul>
 <h1>Sign Up Page</h1>
 
 <p>This is going to be the sign up page. I am going to need to wait to use a form for this page</p>
