Important changes were made to the index page.

--- a/index.html
+++ b/index.html
@@ -2,4 +2,10 @@
 
 <h1> Index Page </h1>
 
-<p> 
+<p> this page will show the band's logo. </p>
+
+<p> this page will also show the other pages on it as well, or links to the pages. </p>
+
+<footer> 
+Copyright 2017 by Matt Rockhold 
+</footer>
