Added the unordered list of links for pages to every page. Also renamed "log-in page.html" to be "log-in_page.html" so that it has no spaces.

--- a/store_page.html
+++ b/store_page.html
@@ -1,12 +1,22 @@
+<!DOCTYPE html>
 <!-- Will Roberts -->
+<html lang="en">
+
 <ul>
-	<li>about_page.html </li>
-	<li>Album Page </li>
-	<li>Index Page </li>
-	<li>Information Page </li>
-	<li>Login Page </li>
-	<li>schedule_page.html </li>
-	<li>signup_page.html </li>
-	<li>store_page.html </li>
+	<li><a href="about_page.html">About the Band</a></li>
+	<li><a href="album_page.html">Album Information</a> </li>
+	<li><a href="index.html">Index</a> </li>
+	<li><a href="info_page.html">Members' Information</a> </li>
+	<li><a href="log-in_page.html">Log-in</a> </li>
+	<li><a href="schedule_page.html">Schedule</a> </li>
+	<li><a href="signup_page.html">Sign up</a> </li>
 </ul>
-Items for sale
+
+<h2>Items for sale
+
+<h4>Coffee Mug</h4>
+<p>This coffee mug comes in either black or white and has the band's logo on the front of it.</p>
+
+<p>
+
+</html>
