--- a/about_page.html
+++ b/about_page.html
@@ -1,13 +1,14 @@
+<!DOCTYPE html>
 <!-- Will Roberts -->
+<html lang="en">
 <ul>
-	<li>about_page.html </li>
-	<li>Album Page </li>
-	<li>Index Page </li>
-	<li>Information Page </li>
-	<li>Login Page </li>
-	<li>schedule_page.html </li>
-	<li>signup_page.html </li>
-	<li>store_page.html </li>
+	<li><a href="album_page.html">Album Information</a> </li>
+	<li><a href="index.html">Index</a> </li>
+	<li><a href="info_page.html">Members' Information</a> </li>
+	<li><a href="log-in_page.html">Log-in</a> </li>
+	<li><a href="schedule_page.html">Schedule</a> </li>
+	<li><a href="signup_page.html">Sign up</a> </li>
+	<li><a href="store_page.html">Merchandise</a> </li>
 </ul>
 
 <h1>About the Band</h1>
@@ -19,3 +20,6 @@
 	<li>Ames</li>
 	<li>Ankeny</li>
 </ul>
+
+
+</html>
