--- a/album_page.html
+++ b/album_page.html
@@ -1,6 +1,15 @@
 <!-- Matt Rockhold --> 
 
 <!DOCTYPE html> 
+<ul>
+	<li><a href="about_page.html">About the Band</a></li>
+	<li><a href="index.html">Index</a> </li>
+	<li><a href="info_page.html">Members' Information</a> </li>
+	<li><a href="log-in_page.html">Log-in</a> </li>
+	<li><a href="schedule_page.html">Schedule</a> </li>
+	<li><a href="signup_page.html">Sign up</a> </li>
+	<li><a href="store_page.html">Merchandise</a> </li>
+</ul>
 
 <h1> Album Page </h1>
 
