--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!-- Matt Rockhold --> 
-
+<ul>
+	<li><a href="about_page.html">About the Band</a></li>
+	<li><a href="album_page.html">Album Information</a> </li>
+	<li><a href="info_page.html">Members' Information</a> </li>
+	<li><a href="log-in_page.html">Log-in</a> </li>
+	<li><a href="schedule_page.html">Schedule</a> </li>
+	<li><a href="signup_page.html">Sign up</a> </li>
+	<li><a href="store_page.html">Merchandise</a> </li>
+</ul>
 <h1> Index Page </h1>
 
 <p> this page will show the band's logo. </p>
