--- a/info_page.html
+++ b/info_page.html
@@ -1,6 +1,14 @@
 <!-- Matt Rockhold --> 
 <!DOCTYPE html> 
-
+<ul>
+	<li><a href="about_page.html">About the Band</a></li>
+	<li><a href="album_page.html">Album Information</a> </li>
+	<li><a href="index.html">Index</a> </li>
+	<li><a href="log-in_page.html">Log-in</a> </li>
+	<li><a href="schedule_page.html">Schedule</a> </li>
+	<li><a href="signup_page.html">Sign up</a> </li>
+	<li><a href="store_page.html">Merchandise</a> </li>
+</ul>
 <h1> Information Page </h1>
 
 <body> This is an info page to get to know all of the band members of this great country group, Boots N Beer. </body>
