--- a/log-in_page.html
+++ b/log-in_page.html
@@ -1,16 +1,21 @@
-<!DOCTYPE html>
-<!-- Will Roberts -->
-<html lang="en">
+<!-- Matt Rockhold -->
 
 <ul>
 	<li><a href="about_page.html">About the Band</a></li>
 	<li><a href="album_page.html">Album Information</a> </li>
 	<li><a href="index.html">Index</a> </li>
 	<li><a href="info_page.html">Members' Information</a> </li>
-	<li><a href="log-in_page.html">Log-in</a> </li>
+	<li><a href="schedule_page.html">Schedule</a> </li>
 	<li><a href="signup_page.html">Sign up</a> </li>
 	<li><a href="store_page.html">Merchandise</a> </li>
 </ul>
-Schedule Page
 
-</html>
+<h1>Log-in Page</h1>
+
+<p> This is going to be the login page. </p>
+
+<head> Has all of the main information about the band and their events, schedules, merchandising, and contact information. </head>
+
+
+
+ 
