Added <!DOCTYPE html> and <html lang="en"> to the top of all pages missing them. Also added </html> to the end of pages missing them.

--- a/album_page.html
+++ b/album_page.html
@@ -1,6 +1,7 @@
 <!-- Matt Rockhold --> 
-
 <!DOCTYPE html> 
+<html lang="en">
+
 <ul>
 	<li><a href="about_page.html">About the Band</a></li>
 	<li><a href="index.html">Index</a> </li>
@@ -19,3 +20,5 @@
 
 <b> Albums were recorded at Golden Fiddle Records. </b>
 <address> Golden Fiddle Records located at 1234 Shawqa Avenue in Des Moines, IA. </address>
+
+</html>
