--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!-- Matt Rockhold --> 
+<!DOCTYPE html> 
+<html lang="en">
+
 <ul>
 	<li><a href="about_page.html">About the Band</a></li>
 	<li><a href="album_page.html">Album Information</a> </li>
@@ -17,3 +20,5 @@
 <footer> 
 Copyright 2017 by Matt Rockhold 
 </footer>
+
+</html>
