--- a/log-in_page.html
+++ b/log-in_page.html
@@ -1,4 +1,6 @@
-<!-- Matt Rockhold -->
+<!-- Matt Rockhold --> 
+<!DOCTYPE html> 
+<html lang="en">
 
 <ul>
 	<li><a href="about_page.html">About the Band</a></li>
@@ -16,6 +18,4 @@
 
 <head> Has all of the main information about the band and their events, schedules, merchandising, and contact information. </head>
 
-
-
- 
+</html>
