--- a/about_page.html
+++ b/about_page.html
@@ -13,13 +13,21 @@
 
 <h1>About the Band</h1>
 
-<p>Coming together for the first time by singing at a bar's karaoke machine, "Boots 'n Beer" have been making music for just under a year now. In that time frame, they have released two small albums. They will soon be going on a tour in some smaller towns located around Des Moines including: </p>
+<h3>Beginnings</h3>
+
+<p>"Boots 'n Beer" first came together unintentionally on stage for karaoke in small bar in Des Moines. After performing, they found that they matched fairly well and had the makings of an actual band. Starting with small gigs, they began making headway with "Boots 'n Beer" when a scout heard some of their music and got them spots opening for more popular bands performing in the Des Moines area.</p>
+
+<h3>Tour</h3>
+
+<p>The band is getting ready to head out on their first tour around Iowa towns. They will be going to locations including, but not limited to: </p>
 
 <ul>
 	<li>Indianola</li>
-	<li>Ames</li>
-	<li>Ankeny</li>
+	<li>Red Oak</li>
+	<li>Pleasantville</li>
 </ul>
+
+<p>For a more complete list of performances, please refer to the "Schedule" page.
 
 
 </html>
