--- a/store_page.html
+++ b/store_page.html
@@ -12,11 +12,22 @@
 	<li><a href="signup_page.html">Sign up</a> </li>
 </ul>
 
-<h2>Items for sale
+<h1>Items for sale</h1>
 
 <h4>Coffee Mug</h4>
 <p>This coffee mug comes in either black or white and has the band's logo on the front of it.</p>
 
-<p>
+<h4>Tee Shirt</h4>
+<p>T-shirts with the logo on the front are available in the following sizes:</p>
+<ul>
+	<li>XS</li>
+	<li>S</li>
+	<li>M</li>
+	<li>L</li>
+	<li>XL</li>
+</ul>
+
+<h2> More items coming soon!</h2>
+
 
 </html>
