Uploaded a new version of the logo, and added the logo to the top of all pages.

--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -10,7 +10,7 @@
 	<li><a href="signup_page.html">Sign up</a> </li>
 	<li><a href="store_page.html">Merchandise</a> </li>
 </ul>
-
+<img src="img/bootsnbeer_logo.png" alt="Band Logo" />
 <h1>About the Band</h1>
 
 <h3>Beginnings</h3>
