--- a/boots_n_beer_band/public_html/info_page.html
+++ b/boots_n_beer_band/public_html/info_page.html
@@ -11,6 +11,8 @@
 	<li><a href="signup_page.html">Sign up</a> </li>
 	<li><a href="store_page.html">Merchandise</a> </li>
 </ul>
+<img src="img/bootsnbeer_logo.png" alt="Band Logo" />
+
 <h1> Information Page </h1>
 
 <body> This is an info page to get to know all of the band members of this great country group, Boots N Beer. </body>
