--- a/boots_n_beer_band/public_html/store_page.html
+++ b/boots_n_beer_band/public_html/store_page.html
@@ -11,6 +11,7 @@
 	<li><a href="schedule_page.html">Schedule</a> </li>
 	<li><a href="signup_page.html">Sign up</a> </li>
 </ul>
+<img src="img/bootsnbeer_logo.png" alt="Band Logo" />
 
 <h1>Items for sale</h1>
 
