--- a/boots_n_beer_band/public_html/index.html
+++ b/boots_n_beer_band/public_html/index.html
@@ -11,6 +11,8 @@
 	<li><a href="signup_page.html">Sign up</a> </li>
 	<li><a href="store_page.html">Merchandise</a> </li>
 </ul>
+<img src="img/bootsnbeer_logo.png" alt="Band Logo" />
+
 <h1> Index Page </h1>
 
 <p> this page will show the band's logo. </p>
