--- a/boots_n_beer_band/public_html/log-in_page.html
+++ b/boots_n_beer_band/public_html/log-in_page.html
@@ -11,6 +11,7 @@
 	<li><a href="signup_page.html">Sign up</a> </li>
 	<li><a href="store_page.html">Merchandise</a> </li>
 </ul>
+<img src="img/bootsnbeer_logo.png" alt="Band Logo" />
 
 <h1>Log-in Page</h1>
 
