--- a/boots_n_beer_band/public_html/schedule_page.html
+++ b/boots_n_beer_band/public_html/schedule_page.html
@@ -11,6 +11,8 @@
 	<li><a href="signup_page.html">Sign up</a> </li>
 	<li><a href="store_page.html">Merchandise</a> </li>
 </ul>
+<img src="img/bootsnbeer_logo.png" alt="Band Logo" />
+
 <h1>Schedule</h1>
 
 <p>For the upcoming tour, Boots 'N Beer will be performing at the following locations:</p>
