--- a/boots_n_beer_band/public_html/signup_page.html
+++ b/boots_n_beer_band/public_html/signup_page.html
@@ -11,6 +11,8 @@
 	<li><a href="schedule_page.html">Schedule</a> </li>
 	<li><a href="store_page.html">Merchandise</a> </li>
 </ul>
+<img src="img/bootsnbeer_logo.png" alt="Band Logo" />
+
 <h1>Sign Up Page</h1>
 
 <p>This is going to be the sign up page. I am going to need to wait to use a form for this page</p>
