Finishing touches on all pages and an update on the logo.

--- a/boots_n_beer_band/public_html/schedule_page.html
+++ b/boots_n_beer_band/public_html/schedule_page.html
@@ -2,6 +2,12 @@
 <!-- Will Roberts -->
 <html lang="en">
 
+<head>
+  <meta charset="utf-8">
+  <title>Boots 'N Beer: Tour Schedule</title>
+</head>
+<body>
+<header>
 <ul>
 	<li><a href="about_page.html">About the Band</a></li>
 	<li><a href="album_page.html">Album Information</a> </li>
@@ -12,6 +18,7 @@
 	<li><a href="store_page.html">Merchandise</a> </li>
 </ul>
 <img src="img/bootsnbeer_logo.png" alt="Band Logo" />
+</header>
 
 <h1>Schedule</h1>
 
@@ -32,9 +39,8 @@
 
 
 
-
-
-
-
-
+<footer>
+	Copyright 2017 by Boots 'N Beer
+</footer>
+</body>
 </html>
