--- a/boots_n_beer_band/public_html/store_page.html
+++ b/boots_n_beer_band/public_html/store_page.html
@@ -2,16 +2,23 @@
 <!-- Will Roberts -->
 <html lang="en">
 
+<head>
+  <meta charset="utf-8">
+  <title>Boots 'N Beer: Merchandise</title>
+</head>
+<body>
+<header>
 <ul>
 	<li><a href="about_page.html">About the Band</a></li>
-	<li><a href="album_page.html">Album Information</a> </li>
-	<li><a href="index.html">Index</a> </li>
-	<li><a href="info_page.html">Members' Information</a> </li>
-	<li><a href="log-in_page.html">Log-in</a> </li>
-	<li><a href="schedule_page.html">Schedule</a> </li>
-	<li><a href="signup_page.html">Sign up</a> </li>
+	<li><a href="album_page.html">Album Information</a></li>
+	<li><a href="index.html">Index</a></li>
+	<li><a href="info_page.html">Members' Information</a></li>
+	<li><a href="log-in_page.html">Log-in</a></li>
+	<li><a href="schedule_page.html">Schedule</a></li>
+	<li><a href="signup_page.html">Sign up</a></li>
 </ul>
 <img src="img/bootsnbeer_logo.png" alt="Band Logo" />
+</header>
 
 <h1>Items for sale</h1>
 
@@ -28,7 +35,12 @@
 	<li>XL</li>
 </ul>
 
-<h2> More items coming soon!</h2>
+<h2>More items coming soon!</h2>
 
 
+
+<footer>
+	Copyright 2017 by Boots 'N Beer
+</footer>
+</body>
 </html>
