--- a/boots_n_beer_band/public_html/album_page.html
+++ b/boots_n_beer_band/public_html/album_page.html
@@ -2,6 +2,11 @@
 <!DOCTYPE html> 
 <html lang="en">
 
+<head>
+  <meta charset="utf-8">
+  <title>Boots 'N Beer: About Page</title>
+</head>
+
 <ul>
 	<li><a href="about_page.html">About the Band</a></li>
 	<li><a href="index.html">Index</a> </li>
