Very imprtant changes made to the album page.

--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
 	<li><a href="signup_page.html">Sign up</a> </li>
 	<li><a href="store_page.html">Merchandise</a> </li>
 </ul>
-<h1> Index Page </h1>
 
-<p> this page will show the band's logo. </p>
+<h1> Index Page Title: Boots N Beer Band</h1>
+<p> This page will show the band's logo. </p>
+<p> This page will also show the other pages on it as well, or links to the pages. </p>
+<p> This page will also have other certain pictures on it as well. May not be band members' photos, but maybe other types of instruments they play or pictures that represent who they are or what they are about. </p>
 
-<p> this page will also show the other pages on it as well, or links to the pages. </p>
+<h2> Additional Information </h2>
+<p> For any additional information or questions about the page or the band Boots N Beer in general, please contact Matt Rockhold, the band's manager. 
+
+<address> Phone number: 641-414-9218, email: matt.rockhold@my.simspon.edu </address>
 
 <footer> 
-Copyright 2017 by Matt Rockhold 
+Copyright 2017 by Boots 'N Beer 
 </footer>
 
 </html>
