--- a/info_page.html
+++ b/info_page.html
@@ -25,4 +25,8 @@
 
 <p> Last on this roster is Jake Grit. Jake is the percussionist and rhythm of the group so he plays the drums, piano, and even the bongos!Jake says that he has playing drums ever since he was a kid, whether it was when he bought his first pair of drums or when he was beating on the trash can outside, he just felt this rhythm inside! <p>    
 
+<footer> 
+Copyright by Boots 'N Beer 
+</footer>
+
   </html>
