--- a/boots_n_beer_band/public_html/store_page.html
+++ b/boots_n_beer_band/public_html/store_page.html
@@ -23,9 +23,11 @@
 <h1>Items for sale</h1>
 
 <h4>Coffee Mug</h4>
+<img src="img/bootsnbeer_mug" alt="Photo of Mug" />
 <p>This coffee mug comes in either black or white and has the band's logo on the front of it.</p>
 
 <h4>Tee Shirt</h4>
+<img src="img/bootsnbeer_tshirt" alt="Photo of T-Shirt" />
 <p>T-shirts with the logo on the front are available in the following sizes:</p>
 <ul>
 	<li>XS</li>
