Changes were made to the adding of these pictures and pages.

--- a/boots_n_beer_band/public_html/index.html
+++ b/boots_n_beer_band/public_html/index.html
@@ -16,17 +16,14 @@
 	<li><a href="signup_page.html">Sign up</a> </li>
 	<li><a href="store_page.html">Merchandise</a> </li>
 </ul>
-<<<<<<< HEAD:index.html
-=======
+
 <img src="img/bootsnbeer_logo.png" alt="Band Logo" />
 
-<h1> Index Page </h1>
->>>>>>> b8441a1aab2825e6e188362150971ae8316df3bb:boots_n_beer_band/public_html/index.html
-
 <h1> Index Page Title: Boots N Beer Band</h1>
-<p> This page will show the band's logo. </p>
-<p> This page will also show the other pages on it as well, or links to the pages. </p>
-<p> This page will also have other certain pictures on it as well. May not be band members' photos, but maybe other types of instruments they play or pictures that represent who they are or what they are about. </p>
+<p>Welcome to the Boots 'N Beer Band official website, home to Iowa's favorite small-town band! See the different links on this page to get any cool novelty items, find out about important dates and events, or just to listen to what kind of music the band has been brewing up!</p>
+
+<p>Need a band for your barn-yard wedding? Feel like listening to something that represents Iowa? Just wanna get out of the house and listen to a great small-town band? If so, then Boots 'N Beer Band is the band for you! They range from country to old rock to even old blues! There's nothing this band can't do!</p>
+
 
 <h2> Additional Information </h2>
 <p> For any additional information or questions about the page or the band Boots N Beer in general, please contact Matt Rockhold, the band's manager. 
