Created a "Simpson Logo" and added it to our directory. Logo put on about_page.html and was made into a linked image.

--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -37,6 +37,12 @@
 
 <p>For a more complete list of performances, please refer to the "Schedule" page.</p>
 
+<h3>Website source</h3>
+<p>Website brought to you by students of Simpson College. Click the image below to go Simpson's website.</p>
+<a href="http://simpson.edu"><img alt="Simpson Logo" src="img/psudo_simpsonlogo.png" /></a>
+
+
+
 <footer>
 	Copyright 2017 by Boots 'N Beer
 </footer>
