--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -38,7 +38,7 @@
 <p>For a more complete list of performances, please refer to the "Schedule" page.</p>
 
 <h3>Website source</h3>
-<p>Website brought to you by students of Simpson College. Click the image below to go Simpson's website.</p>
+<p>This website was brought to you by students of Simpson College. Click the image below to go Simpson's website.</p>
 <a href="http://simpson.edu"><img alt="Simpson Logo" src="img/psudo_simpsonlogo.png" /></a>
 
 
