Important changes were made to these pages.

--- a/boots_n_beer_band/public_html/index.html
+++ b/boots_n_beer_band/public_html/index.html
@@ -26,7 +26,7 @@
 
 
 <h2> Additional Information </h2>
-<p> For any additional information or questions about the page or the band Boots N Beer in general, please contact Matt Rockhold, the band's manager. 
+<p> For any additional information or questions about the page or the band Boots 'N Beer in general, please contact Matt Rockhold, the band's manager. 
 
 <address> Phone number: 641-414-9218, email: matt.rockhold@my.simspon.edu </address>
 
