Changed "copyright" to be the copyright symbol for all pages.

--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -9,13 +9,13 @@
 <body>
 <header>
 <ul>
-	<li><a href="album_page.html">Album Information</a> </li>
-	<li><a href="index.html">Index</a> </li>
-	<li><a href="info_page.html">Members' Information</a> </li>
-	<li><a href="log-in_page.html">Log-in</a> </li>
-	<li><a href="schedule_page.html">Schedule</a> </li>
-	<li><a href="signup_page.html">Sign up</a> </li>
-	<li><a href="store_page.html">Merchandise</a> </li>
+	<li><a href="album_page.html">Album Information</a></li>
+	<li><a href="index.html">Index</a></li>
+	<li><a href="info_page.html">Members' Information</a></li>
+	<li><a href="log-in_page.html">Log-in</a></li>
+	<li><a href="schedule_page.html">Schedule</a></li>
+	<li><a href="signup_page.html">Sign up</a></li>
+	<li><a href="store_page.html">Merchandise</a></li>
 </ul>
 <img src="img/bootsnbeer_logo.png" alt="Band Logo" />
 </header>
@@ -23,7 +23,7 @@
 
 <h3>Beginnings</h3>
 
-<p>Boots 'N Beer first came together unintentionally on stage for karaoke in small bar in Des Moines. After performing, they found that they matched fairly well and had the makings of an actual band. Starting with small gigs, they began making headway with Boots 'n Beer when a scout heard some of their music and got them spots opening for more popular bands performing in the Des Moines area.</p>
+<p>Boots 'N Beer first came together unintentionally on stage for karaoke in small bar in Des Moines. After performing, they found that they matched fairly well and had the makings of an actual band. Starting with small gigs, they began making headway with Boots 'N Beer when a scout heard some of their music and got them spots opening for more popular bands performing in the Des Moines area.</p>
 
 <h3>Tour</h3>
 
@@ -44,7 +44,7 @@
 
 
 <footer>
-	Copyright 2017 by Boots 'N Beer
+	&copy; 2017 by Boots 'N Beer
 </footer>
 
 </body>
