--- a/boots_n_beer_band/public_html/signup_page.html
+++ b/boots_n_beer_band/public_html/signup_page.html
@@ -10,12 +10,12 @@
 <header>
 <ul>
 	<li><a href="about_page.html">About the Band</a></li>
-	<li><a href="album_page.html">Album Information</a> </li>
-	<li><a href="index.html">Index</a> </li>
-	<li><a href="info_page.html">Members' Information</a> </li>
-	<li><a href="log-in_page.html">Log-in</a> </li>
-	<li><a href="schedule_page.html">Schedule</a> </li>
-	<li><a href="store_page.html">Merchandise</a> </li>
+	<li><a href="album_page.html">Album Information</a></li>
+	<li><a href="index.html">Index</a></li>
+	<li><a href="info_page.html">Members' Information</a></li>
+	<li><a href="log-in_page.html">Log-in</a></li>
+	<li><a href="schedule_page.html">Schedule</a></li>
+	<li><a href="store_page.html">Merchandise</a></li>
 </ul>
 <img src="img/bootsnbeer_logo.png" alt="Band Logo" />
 </header>
@@ -25,7 +25,7 @@
 <p>This is going to be the sign up page. I am going to need to wait to use a form for this page</p>
 
 <footer>
-	Copyright 2017 by Boots 'N Beer
+	&copy; 2017 by Boots 'N Beer
 </footer>
 </body>
 </html>
