Photos were added to info and index page and other information was added to all pages.

--- a/boots_n_beer_band/public_html/album_page.html
+++ b/boots_n_beer_band/public_html/album_page.html
@@ -2,40 +2,30 @@
 <!DOCTYPE html> 
 <html lang="en">
 
-<<<<<<< HEAD:album_page.html
+
 <head> 
   <meta charset="utf-8">
-  <title: Boots N Beer Album Page </title> 
+  <title>Boots N Beer Band Album Page </title> 
 </head>
 <body> 
 <header> 
-=======
-<head>
-  <meta charset="utf-8">
-  <title>Boots 'N Beer: About Page</title>
-</head>
 
->>>>>>> b8441a1aab2825e6e188362150971ae8316df3bb:boots_n_beer_band/public_html/album_page.html
 <ul>
 	<li><a href="about_page.html">About the Band</a></li>
-	<li><a href="index.html">Index</a> </li>
-	<li><a href="info_page.html">Members' Information</a> </li>
-	<li><a href="log-in_page.html">Log-in</a> </li>
-	<li><a href="schedule_page.html">Schedule</a> </li>
-	<li><a href="signup_page.html">Sign up</a> </li>
-	<li><a href="store_page.html">Merchandise</a> </li>
+	<li><a href="index.html">Index</a></li>
+	<li><a href="info_page.html">Members' Information</a></li>
+	<li><a href="log-in_page.html">Log-in</a></li>
+	<li><a href="schedule_page.html">Schedule</a></li>
+	<li><a href="signup_page.html">Sign up</a></li>
+	<li><a href="store_page.html">Merchandise</a></li>
 </ul>
-<<<<<<< HEAD:album_page.html
-<img src="img/bootsnbeer_logo.png" alt="Band Logo" /> 
-</header> 
 
-=======
-<img src="img/bootsnbeer_logo.png" alt="Band Logo" />
->>>>>>> b8441a1aab2825e6e188362150971ae8316df3bb:boots_n_beer_band/public_html/album_page.html
+<img src="img/bootsnbeer_logo.png" alt="Band Logo"/> 
+</header> 
 
 <h1> Album Page </h1>
 
-<body> Main page displays Boots N Beer's latest hit albums. </body>
+<p> Main page displays Boots N Beer's latest hit albums. </p>
 <p> Click on this page to see two of Boots N Beer's hottest albums, "Dirty" and "Muddy Spurs". </p>
 
 <table>
@@ -53,9 +43,25 @@
   </tbody>
   <tfoot>
     <tr>
-      <td>"Gravel Road"</td>
-      <td>Summary 2</td>
+      <td>"Dirt Roads and Tractor Tires"</td>
+      <td>"Cornbread (Iowa Carbs)"</td>
     </tr>
+    <tr>
+      <td>"I Got a Woman"</td>
+      <td>"Everything's Better Wrapped in Bacon"</td>
+    </tr>
+    <tr> 
+      <td>"Rollin' Through the Fields"</td> 
+      <td>"Bumpy Towns, Flat Highways"</td>
+    </tr> 
+    <tr> 
+      <td>"The Big One"</td>
+      <td>"Iowa: America's Mini Canada"</td> 
+    </tr>
+    <tr> 
+      <td>"You Only Need Some Grit"</td>
+      <td>"Bootscooters"</td>
+    </tr> 
   </tfoot>
 </table>
 
@@ -63,7 +69,7 @@
 <address> Golden Fiddle Records located at 1234 Shawqa Avenue in Des Moines, IA. </address>
 
 <footer> 
-Copyright by Boots 'N Beer 
+&copy; by Boots 'N Beer 
 </footer>
 </body> 
 </html>
