I have created form fields for the signup_page.html file. The fields include First Name, Last Name, Username, and Password. I also added a submit button below the fields and a short description of imaginary benefits of creating an account.

--- a/boots_n_beer_band/public_html/signup_page.html
+++ b/boots_n_beer_band/public_html/signup_page.html
@@ -22,7 +22,17 @@
 
 <h1>Sign Up Page</h1>
 
-<p>This is going to be the sign up page. I am going to need to wait to use a form for this page</p>
+<p>By creating an account, you will be able to keep a shopping cart of merchandise you intend on purchasing if you leave the webiste. You will also be notified whenever information on any of the pages have been updated.</p>
+
+<form>
+<pre>
+First Name: <input type="text" name="firstname">
+Last Name:  <input type="text" name="lastname">
+Username:   <input type="text" name="username">
+Password:   <input type="text" name="password">
+<input type="submit" value="Submit">
+</pre>
+</form>
 
 <footer>
 	&copy; 2017 by Boots 'N Beer
