Changed Joe Deere to Joe Green to practice merging files with conflicts.

--- a/boots_n_beer_band/public_html/info_page.html
+++ b/boots_n_beer_band/public_html/info_page.html
@@ -25,7 +25,7 @@
 
 <h2> Biography </h2>
 <img src="img/my_face.jpg" alt="Image of Joe Deere"/>
-<p> Joe Deere is the lead singer of the band. Upon that, he also plays the mandolin. Joe is from Murray, IA and he enjoys wearing a good pair of boots and blue jeans and watching football on Sundays. </p> 
+<p> Joe Green is the lead singer of the band. Upon that, he also plays the mandolin. Joe is from Murray, IA and he enjoys wearing a good pair of boots and blue jeans and watching football on Sundays. </p> 
 <img src="img/ben_face.png" alt="Image of Randy Raccoon"/>
 <p> Randy Raccoon is the lead guitarist and back-up vocals. He plays acoustic, electric, and steel guitar, and also banjo, and fiddle! Randy's favorite country star is Charlie Daniel's and he loves watching the Grand Ole Opry.</p> 
 <img src="img/chase_face.png" alt="Image of Denver Denim"/> 
