Added two periods on the about page

--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -35,7 +35,7 @@
 	<li>Pleasantville</li>
 </ul>
 
-<p>For a more complete list of performances, please refer to the "Schedule" page.</p>
+<p>For a more complete list of performances, please refer to the "Schedule" page...</p>
 
 <h3>Website source</h3>
 <p>This website was brought to you by students of Simpson College. Click the image below to go Simpson's website.</p>
