Made major changes to background and some pictures, also changed nav bar to look cleaner

--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -24,7 +24,7 @@
     </ul>
 </nav>
 
-<img src="img/bootsnbeer_logo.png" alt="Band Logo" />
+<img class="boot" src="img/bootsnbeer_logo2.png" alt="Band Logo" />
 </header>
 <h1 style="text-align:center;font-size: 35px;font-family: Engravers MT;">About the Band</h1>
 
@@ -35,13 +35,11 @@
 <h3>Tour</h3>
 
 <p>The band is getting ready to head out on their first tour around Iowa towns. They will be going to locations including, but not limited to: </p>
-
 <ul>
-	<li>Indianola</li>
-	<li>Red Oak</li>
-	<li>Pleasantville</li>
+    <li>Indianola</li>
+    <li>Red Oak</li>
+    <li>Pleasantville</li>
 </ul>
-
 <p>For a more complete list of performances, please refer to the "Schedule" page...</p>
 
 <h3>Website source</h3>
