--- a/boots_n_beer_band/public_html/index.html
+++ b/boots_n_beer_band/public_html/index.html
@@ -5,17 +5,20 @@
 <head>
   <meta charset="utf-8">
   <title>Boots 'N Beer: About Page</title>
+  
+  <link rel="stylesheet" type="text/css" href="css_karson_richardson.css">
+  
 </head>
 <body>
 <header>
 <ul>
-	<li><a href="about_page.html">About the Band</a></li>
-	<li><a href="album_page.html">Album Information</a></li>
-	<li><a href="info_page.html">Members' Information</a></li>
-	<li><a href="log-in_page.html">Log-in</a></li>
-	<li><a href="schedule_page.html">Schedule</a></li>
-	<li><a href="signup_page.html">Sign up</a></li>
-	<li><a href="store_page.html">Merchandise</a></li>
+    <li><a href="about_page.html">About the Band</a></li>
+    <li><a href="album_page.html">Album Information</a></li>
+    <li><a href="info_page.html">Members' Information</a></li>
+    <li><a href="log-in_page.html">Log-in</a></li>
+    <li><a href="schedule_page.html">Schedule</a></li>
+    <li><a href="signup_page.html">Sign up</a></li>
+    <li><a href="store_page.html">Merchandise</a></li>
 </ul>
 
 <img src="img/bootsnbeer_logo.png" alt="Band Logo"/>
