--- a/boots_n_beer_band/public_html/store_page.html
+++ b/boots_n_beer_band/public_html/store_page.html
@@ -5,17 +5,20 @@
 <head>
   <meta charset="utf-8">
   <title>Boots 'N Beer: Merchandise</title>
+  
+  <link rel="stylesheet" type="text/css" href="css_karson_richardson.css">
+  
 </head>
 <body>
 <header>
 <ul>
-	<li><a href="about_page.html">About the Band</a></li>
-	<li><a href="album_page.html">Album Information</a></li>
-	<li><a href="index.html">Index</a></li>
-	<li><a href="info_page.html">Members' Information</a></li>
-	<li><a href="log-in_page.html">Log-in</a></li>
-	<li><a href="schedule_page.html">Schedule</a></li>
-	<li><a href="signup_page.html">Sign up</a></li>
+    <li><a href="about_page.html">About the Band</a></li>
+    <li><a href="album_page.html">Album Information</a></li>
+    <li><a href="index.html">Index</a></li>
+    <li><a href="info_page.html">Members' Information</a></li>
+    <li><a href="log-in_page.html">Log-in</a></li>
+    <li><a href="schedule_page.html">Schedule</a></li>
+    <li><a href="signup_page.html">Sign up</a></li>
 </ul>
 <img src="img/bootsnbeer_logo.png" alt="Band Logo" />
 </header>
@@ -29,13 +32,15 @@
 <h4>Tee Shirt</h4>
 <img src="img/bootsnbeer_tshirt.png" alt="Photo of T-Shirt" />
 <p>T-shirts with the logo on the front are available in the following sizes:</p>
-<ul>
-	<li>XS</li>
-	<li>S</li>
-	<li>M</li>
-	<li>L</li>
-	<li>XL</li>
-</ul>
+<nav>
+    <ul>
+	    <li>XS</li>
+	    <li>S</li>
+	    <li>M</li>
+	    <li>L</li>
+	    <li>XL</li>
+	</ul>
+</nav>
 
 <h2>More items coming soon!</h2>
 
