Changed some borders and fonts on about page

--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -28,7 +28,7 @@
 </header>
 <h1 style="text-align:center;font-size: 35px;font-family: Engravers MT;">About the Band</h1>
 
-<h3>Beginnings</h3>
+<h3 class="beginnings">Beginnings</h3>
 
 <p class="beginnings">Boots 'N Beer first came together unintentionally on stage for karaoke in small bar in Des Moines. After performing, they found that they matched fairly well and had the makings of an actual band. Starting with small gigs, they began making headway with Boots 'N Beer when a scout heard some of their music and got them spots opening for more popular bands performing in the Des Moines area.</p>
 
