Made some changes to borders for headers on about page

--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -32,7 +32,7 @@
 
 <p class="beginnings">Boots 'N Beer first came together unintentionally on stage for karaoke in small bar in Des Moines. After performing, they found that they matched fairly well and had the makings of an actual band. Starting with small gigs, they began making headway with Boots 'N Beer when a scout heard some of their music and got them spots opening for more popular bands performing in the Des Moines area.</p>
 
-<h3>Tour</h3>
+<h3 class="tour">Tour</h3>
 
 <p>The band is getting ready to head out on their first tour around Iowa towns. They will be going to locations including, but not limited to: </p>
 <ul>
@@ -42,7 +42,7 @@
 </ul>
 <p>For a more complete list of performances, please refer to the "Schedule" page...</p>
 
-<h3>Website source</h3>
+<h3 class="website_source">Website source</h3>
 <p>This website was brought to you by students of Simpson College. Click the image below to go Simpson's website.</p>
 <a href="http://simpson.edu"><img alt="Simpson Logo" src="img/psudo_simpsonlogo.png" /></a>
 
