Added docs and resources folder to the directory, as well as a css folder into public.html. Added mouse pad to the stor page, along with a description, colors, and a photo.

--- a/boots_n_beer_band/public_html/store_page.html
+++ b/boots_n_beer_band/public_html/store_page.html
@@ -36,7 +36,13 @@
 	<li>L</li>
 	<li>XL</li>
 </ul>
-
+<h4>Mouse Pad</h4>
+<img src="img/bootsnbeer_mousepad.png" alt="Photo of Mousepad" />
+<p>Ergonomic mouse pads with the logo on the front are available in black, white, grey, and brown.
+<br>
+<br>
+<br>
+<br>
 <h2>More items coming soon!</h2>
 
 
