Added extra tour dates, breaks, and auto aligned the indentation.

--- a/boots_n_beer_band/public_html/schedule_page.html
+++ b/boots_n_beer_band/public_html/schedule_page.html
@@ -1,46 +1,57 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!-- Will Roberts -->
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <title>Boots 'N Beer: Tour Schedule</title>
 </head>
 <body>
-<header>
-<ul>
-	<li><a href="about_page.html">About the Band</a></li>
-	<li><a href="album_page.html">Album Information</a></li>
-	<li><a href="index.html">Index</a></li>
-	<li><a href="info_page.html">Members' Information</a></li>
-	<li><a href="log-in_page.html">Log-in</a></li>
-	<li><a href="signup_page.html">Sign up</a></li>
-	<li><a href="store_page.html">Merchandise</a></li>
-</ul>
-<img src="img/bootsnbeer_logo.png" alt="Band Logo" />
-</header>
-
-<h1>Schedule</h1>
-
-<p>For the upcoming tour, Boots 'N Beer will be performing at the following locations:</p>
-
-<ol>
-	<li>September 15th - Indianola, Iowa</li>
-	<li>September 18th - Pleasantville, Iowa</li>
-	<li>September 20th - Red Oak, Iowa</li>
-	<li>September 22nd - Storm Lake, Iowa</li>
-	<li>September 25th - Waterloo, Iowa</li>
-	<li>September 27th - Davenport, Iowa</li>
-	<li>September 29th - Marshalltown, Iowa</li>
-	<li>October 2nd	- Aurelia, Iowa</li>
-	<li>October 4th	- Ottumwa, Iowa</li>
-	<li>October 6th	- Columbus, Iowa</li>
-</ol>
-
-
-
-<footer>
-	&copy; 2017 by Boots 'N Beer
-</footer>
+  <header>
+    <ul>
+      <li>
+        <a href="about_page.html">About the Band</a>
+      </li>
+      <li>
+        <a href="album_page.html">Album Information</a>
+      </li>
+      <li>
+        <a href="index.html">Index</a>
+      </li>
+      <li>
+        <a href="info_page.html">Members' Information</a>
+      </li>
+      <li>
+        <a href="log-in_page.html">Log-in</a>
+      </li>
+      <li>
+        <a href="signup_page.html">Sign up</a>
+      </li>
+      <li>
+        <a href="store_page.html">Merchandise</a>
+      </li>
+    </ul><img src="img/bootsnbeer_logo.png" alt="Band Logo">
+  </header>
+  <h1>Schedule</h1>
+  <p>For the upcoming tour, Boots 'N Beer will be performing at the following locations:</p>
+  <ol>
+    <li>September 15th - Indianola, Iowa</li>
+    <li>September 18th - Pleasantville, Iowa</li>
+    <li>September 20th - Red Oak, Iowa</li>
+    <li>September 22nd - Storm Lake, Iowa</li>
+    <li>September 25th - Waterloo, Iowa</li>
+    <li>September 27th - Davenport, Iowa</li>
+    <li>September 29th - Marshalltown, Iowa</li>
+    <li>October 2nd - Aurelia, Iowa</li>
+    <li>October 4th - Ottumwa, Iowa</li>
+    <li>October 6th - Columbus, Iowa</li>
+    <li>October 10 - Mount Vernon, Iowa</li>
+    <li>October 15th - Carroll, Iowa</li>
+    <li>October 31st - Ames, Iowa</li>
+    <li>November 4th - Templeton, Iowa</li>
+  </ol>
+  <h3>More Dates To Be Announced</h3><br>
+  <footer>
+    &copy; 2017 by Boots 'N Beer
+  </footer>
 </body>
 </html>
