Auto-aligned store page, and changed  "list of songs on album" to "track list".

--- a/boots_n_beer_band/public_html/album_page.html
+++ b/boots_n_beer_band/public_html/album_page.html
@@ -37,8 +37,8 @@
   </thead>
   <tbody>
     <tr>
-      <td>List of songs on album:</td>
-      <td>List of songs on album:</td>
+      <td>Track List:</td>
+      <td>Track List:</td>
     </tr>
   </tbody>
   <tfoot>
