Added an "Our Music" section, stating what music the band specializes in, and what they are able to play.

--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -25,6 +25,17 @@
 
 <p>Boots 'N Beer first came together unintentionally on stage for karaoke in small bar in Des Moines. After performing, they found that they matched fairly well and had the makings of an actual band. Starting with small gigs, they began making headway with Boots 'N Beer when a scout heard some of their music and got them spots opening for more popular bands performing in the Des Moines area.</p>
 
+<h3>Our Music</h3>
+
+<p>Boots 'N Beer has expertise in many musical genres, including but not limited to:</p>
+<ul>
+    <li>Country</li>
+    <li>Bluegrass</li>
+    <li>Folk</li>
+    <li>Blues</li>
+</ul>
+<p>Upon request, the band can play almost every style or genre of music you desire.</p>
+
 <h3>Tour</h3>
 
 <p>The band is getting ready to head out on their first tour around Iowa towns. They will be going to locations including, but not limited to: </p>
