--- a/boots_n_beer_band/public_html/album_page.html
+++ b/boots_n_beer_band/public_html/album_page.html
@@ -5,6 +5,7 @@
 
 <head> 
   <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="css/ryan_nees.css">
   <title>Boots N Beer Band Album Page </title> 
 </head>
 <body> 
