Major changes to style of About page and Album Page

--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -17,34 +17,52 @@
 	    <li><a href="album_page.html">Album Information</a></li>
 	    <li><a href="index.html">Index</a></li>
 	    <li><a href="info_page.html">Members' Information</a></li>
-	    <li><a href="log-in_page.html">Log-in</a></li>
 	    <li><a href="schedule_page.html">Schedule</a></li>
-	    <li><a href="signup_page.html">Sign up</a></li>
 	    <li><a href="store_page.html">Merchandise</a></li>
+	    <li><a href="log-in_page.html">Log-in</a></li>
+	    <li><a href="signup_page.html">Sign up</a></li>
     </ul>
 </nav>
 
 <img class="boot" src="img/bootsnbeer_logo2.png" alt="Band Logo" />
 </header>
-<h1 style="text-align:center;font-size: 35px;font-family: Engravers MT;">About the Band</h1>
+<h1 style="text-align:center;font-size: 35px;font-family: Engravers MT;
+border-bottom: solid #653119;border-top: solid #653119;padding: 30px 0px 30px 0px;">About the Band</h1>
 
 <h3 class="beginnings">Beginnings</h3>
 
-<p class="beginnings">Boots 'N Beer first came together unintentionally on stage for karaoke in small bar in Des Moines. After performing, they found that they matched fairly well and had the makings of an actual band. Starting with small gigs, they began making headway with Boots 'N Beer when a scout heard some of their music and got them spots opening for more popular bands performing in the Des Moines area.</p>
+<p class="beginnings">Boots 'N Beer first came together unintentionally on stage for karaoke in 
+small bar in Des Moines. After performing, they found that they matched fairly well and had the 
+makings of an actual band. Starting with small gigs, they began making headway with Boots 'N Beer 
+when a scout heard some of their music and got them spots opening for more popular bands performing 
+in the Des Moines area.</p>
 
 <h3 class="tour">Tour</h3>
 
 <p>The band is getting ready to head out on their first tour around Iowa towns. They will be going to locations including, but not limited to: </p>
-<ul>
+
+<ul class="locations">
     <li>Indianola</li>
     <li>Red Oak</li>
     <li>Pleasantville</li>
+    <li>Storm Lake</li>
+    <li>Altoona</li>
+    <li>Sandyville</li>
+    <li>Des Moines</li>
+    <li>Ankeny</li>
+    <li>Cedar Rapids</li>
+    <li>Iowa City</li>
 </ul>
-<p>For a more complete list of performances, please refer to the "Schedule" page...</p>
+
+<br>
+<br>
+<br>
+
+<p id="schedulerefer">For a more complete list of performances, please refer to the "Schedule" page...</p>
 
 <h3 class="website_source">Website source</h3>
 <p>This website was brought to you by students of Simpson College. Click the image below to go Simpson's website.</p>
-<a href="http://simpson.edu"><img alt="Simpson Logo" src="img/psudo_simpsonlogo.png" /></a>
+<a href="http://simpson.edu"><img id="simpsonlogo" alt="Simpson Logo" src="img/psudo_simpsonlogo.png" /></a>
 
 
 
