--- a/boots_n_beer_band/public_html/album_page.html
+++ b/boots_n_beer_band/public_html/album_page.html
@@ -9,24 +9,44 @@
   
   <link rel="stylesheet" type="text/css" href="css_karson_richardson.css">
   
+  <style>
+  table {
+    border-collapse: collapse;
+    float: center;
+  }
+  table, th {
+    border: solid;
+    border-color: #653119;
+    border-style: outset;
+  }
+  tfoot {
+    border: solid #653119;
+    border-style: outset;
+  }
+  td:hover {
+    background-color: #fff;
+  }
+  </style>
 </head>
 <body> 
 <header> 
 
-<ul>
-    <li><a href="about_page.html">About the Band</a></li>
-    <li><a href="index.html">Index</a></li>
-    <li><a href="info_page.html">Members' Information</a></li>
-    <li><a href="log-in_page.html">Log-in</a></li>
-    <li><a href="schedule_page.html">Schedule</a></li>
-    <li><a href="signup_page.html">Sign up</a></li>
-    <li><a href="store_page.html">Merchandise</a></li>
-</ul>
+<nav>
+    <ul>
+        <li><a href="about_page.html">About the Band</a></li>
+        <li><a href="index.html">Index</a></li>
+        <li><a href="info_page.html">Members' Information</a></li>
+        <li><a href="log-in_page.html">Log-in</a></li>
+        <li><a href="schedule_page.html">Schedule</a></li>
+        <li><a href="signup_page.html">Sign up</a></li>
+        <li><a href="store_page.html">Merchandise</a></li>
+    </ul>
+</nav>
 
-<img src="img/bootsnbeer_logo.png" alt="Band Logo"/> 
+<img class="boot"src="img/bootsnbeer_logo2.png" alt="Band Logo"/> 
 </header> 
 
-<h1> Album Page </h1>
+<h1 id="album"> Album Page </h1>
 
 <p> Main page displays Boots N Beer's latest hit albums. </p>
 <p> Click on this page to see two of Boots N Beer's hottest albums, "Dirty" and "Muddy Spurs". </p>
