--- a/boots_n_beer_band/public_html/schedule_page.html
+++ b/boots_n_beer_band/public_html/schedule_page.html
@@ -11,15 +11,19 @@
 </head>
 <body>
 <header>
-<ul>
-    <li><a href="about_page.html">About the Band</a></li>
-    <li><a href="album_page.html">Album Information</a></li>
-    <li><a href="index.html">Index</a></li>
-    <li><a href="info_page.html">Members' Information</a></li>
-    <li><a href="log-in_page.html">Log-in</a></li>
-    <li><a href="signup_page.html">Sign up</a></li>
-    <li><a href="store_page.html">Merchandise</a></li>
-</ul>
+
+<nav>
+    <ul>
+        <li><a href="about_page.html">About the Band</a></li>
+        <li><a href="album_page.html">Album Information</a></li>
+        <li><a href="index.html">Index</a></li>
+        <li><a href="info_page.html">Members' Information</a></li>
+        <li><a href="log-in_page.html">Log-in</a></li>
+        <li><a href="signup_page.html">Sign up</a></li>
+        <li><a href="store_page.html">Merchandise</a></li>
+    </ul>
+</nav>
+
 <img src="img/bootsnbeer_logo.png" alt="Band Logo" />
 </header>
 
